--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,25 @@
-<h2>Resend confirmation instructions</h2>
 
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+<%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-md-offset-4">
+        <h1 class="text-center login-title">Выслать инструкцию по подтверждению</h1>
+          <div class="account-wall">
+            <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+                alt="">
+            <div class="class-form-signin">
+              <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: 'Email' %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %> 
-  </div>
+              <%= f.submit "Resend instructions", class: 'btn btn-lg btn-primary btn-block' %>
 
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
+              <span class="clearfix"></span>
+            </div>
+
+            <div class="links">
+              <%= render "devise/shared/links" %>
+            </div>
+          </div>
+        </div>
+      </div>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
