--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,32 @@
-<h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
+          <h1 class="text-center login-title">Регистрация</h1>
+            <div class="account-wall">
+              <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120"
+                  alt="">
+              <div class="class-form-signin">
+                <%= f.text_field :display_name, autofocus: true, class: 'form-control', placeholder: 'Display Name' %>
+                <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
+                <% if @minimum_password_length %>
+                <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Password", help: "Password must be (#{@minimum_password_length} characters minimum)"  %>
+                <% else %>
+                  <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "Password" %>
+                <% end %>
+                <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: 'Password confirmation' %>
 
-  <div class="field">
-    <%= f.label :display_name %><br />
-    <%= f.text_field :display_name, autofocus: true %>
-  </div>
+                <%= f.submit "Sign up", class: 'btn btn-lg btn-primary btn-block' %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email%>
-  </div>
+                <span class="clearfix"></span>
+              </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+              <div class="links">
+                <%= render "devise/shared/links" %>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
