--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,12 +1,19 @@
-p= @question.title
-p= @question.body
+div.container
+  div.header
+  div.content
+    div.question-header
+      h1 = @question.title
+    div.question-content
+      div.question
+        = markdown(@question.body)
+      div.answers
 
 - @question.answers.each do |answer|
   p = answer.body
-  - if user_signed_in? && answer.user == current_user
+  - if user_signed_in? && answer.user.id == current_user.id
   p = link_to 'Delete answer', answer, method: :delete
 
-- if user_signed_in? && @question.user == current_user
+- if user_signed_in? && @question.user.id == current_user.id
   p = link_to 'Delete question', @question, method: :delete
 
 = link_to "Create answer", new_question_answer_path(@question)
