--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,7 +16,8 @@ html lang="en"
     /! Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
-
+    = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"
+    = stylesheet_link_tag "//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css"
 
   body
     .navbar.navbar-default.navbar-static-top
@@ -35,10 +36,8 @@ html lang="en"
                 li= link_to "Sign up", new_user_registration_path
 
     .container
-      .row
-        .col-lg-12
-          = bootstrap_flash
-          = yield
+      = bootstrap_flash
+      = yield
 
   footer.page-footer
     span
