--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -7,7 +7,7 @@
       .question
         = @question.body
       .answers
-        = render 'answers'
+        = render @question.answers
       = form_for [@question, @answer], remote: true do |f|
         = f.label :body, 'Your answer'
         = f.text_area :body
