--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,4 +1,4 @@
 <% if @answer.valid? %>
-  $('.answers').append('<%= j render 'answer', answer: @answer %>');
+  $('.answers').append('<%= j render @answer %>');
   $('#answer_body').val('');
 <% end %>
