--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,4 +1,8 @@
-<% if @answer.valid? %>
-  $('.answers').append('<%= j render @answer %>');
-  $('#answer_body').val('');
+<% if @answer.errors.present? %>
+    <% @answer.errors.full_messages.each do |message| %>
+$('.answer-errors').html('<%= j message %>');
+    <% end %>
+<% else %>
+    $('.answers').append('<%= j render @answer %>');
+    $('#answer_body').val('');
 <% end %>
