--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -10,6 +10,7 @@
         = render @question.answers
       = form_for [@question, @answer], remote: true do |f|
         = f.label :body, 'Your answer'
+        .answer-errors
         = f.text_area :body
         - if user_signed_in?
           = f.submit 'Create'
