--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,7 @@ html lang="en"
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
     = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"
     = stylesheet_link_tag "//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/default.min.css"
+    = javascript_include_tag "application"
 
   body
     .navbar.navbar-default.navbar-static-top
