--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -3,6 +3,5 @@
         $('.answer-errors').html('<%= j message %>');
     <% end %>
 <% else %>
-    $('.answers').append('<%= j render @answer %>');
-    $('form#new_answer textarea').val('');
+    $('.answers div#answer-id-<%= @answer.id %>').remove();
 <% end %>
