--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -6,6 +6,11 @@
     .question-content
       .question
         = @question.body
+        p Attachments
+        ul
+          - @question.attachments.each do |a|
+            li= a.file.file.filename
+
       .answers
         = render @question.answers
       = form_for [@question, @answer], remote: true do |f|
