--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,7 +9,7 @@
         p Attachments
         ul
           - @question.attachments.each do |a|
-            li= a.file.file.filename
+            li= link_to a.file.identifier, a.file_url
 
       .answers
         = render @question.answers
