User can add files to answers

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -17,6 +17,10 @@
         = f.label :body, 'Your answer'
         .answer-errors
         = f.text_area :body
+        p
+          = f.fields_for :attachments do |a|
+            = a.label :file
+            = a.file_field :file
         - if user_signed_in?
           = f.submit 'Create'
 
