--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,6 +1,10 @@
 - if answer.id
   div id="answer-id-#{answer.id}" class=(answer.best? ? 'best-answer' : '')
     p = answer.body
+    p Attachments
+    ul
+      - answer.attachments.each do |a|
+        li= link_to a.file.identifier, a.file_url
     - if user_signed_in? && answer.user_id == current_user.id
       p = link_to 'Edit answer', '', class: 'edit-answer-link', data: { answer_id: answer.id }
       p
