--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -3,14 +3,14 @@
     p = answer.body
     p Attachments
     ul
-      - answer.attachments.each do |a|
-        li= link_to a.file.identifier, a.file_url
+      = render answer.attachments
     - if user_signed_in? && answer.user_id == current_user.id
       p = link_to 'Edit answer', '', class: 'edit-answer-link', data: { answer_id: answer.id }
       p
         = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
           = f.label :body, 'Answer'
           = f.text_area :body
+          = render 'attachments/attachment_links', f: f
           = f.submit 'Save answer'
       p = link_to 'Delete answer', answer, remote: true, method: :delete, data: { confirm: 'Are you sure?' }
       - if !answer.best?
