--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -8,8 +8,7 @@
         = @question.body
         p Attachments
         ul
-          - @question.attachments.each do |a|
-            li= link_to a.file.identifier, a.file_url
+          = render @question.attachments
 
       .answers
         = render @question.answers
@@ -17,10 +16,7 @@
         = f.label :body, 'Your answer'
         .answer-errors
         = f.text_area :body
-        p
-          = f.fields_for :attachments do |a|
-            = a.label :file
-            = a.file_field :file
+        = render 'attachments/attachment_links', f: f
         - if user_signed_in?
           = f.submit 'Create'
 
