--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "font-awesome";
 @import "trix";
 @import "answers";
+@import "questions";
 
 html {
   position: relative;
@@ -18,6 +19,9 @@ body {
   line-height: 24px;
 }
 
+.panel-heading a {
+  padding-right: 10px;
+}
 div {
   padding-bottom: 5px;
 }
@@ -165,4 +169,30 @@ input[type="password"]
     line-height: 1.35;
     font-weight: normal;
     margin-bottom: .5em;
+}
+
+
+.btn-file {
+  position: relative;
+  overflow: hidden;
+  margin-right: 5px;
+}
+.btn-file input[type=file] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+  font-size: 100px;
+  text-align: right;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  outline: none;
+  background: white;
+  cursor: inherit;
+  display: block;
+}
+
+.fa-trash-o, .fa-plus {
+  color: #fff;
 }
