--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,17 +1,15 @@
 - if answer.id
-  div id="answer-id-#{answer.id}" class=(answer.best? ? 'best-answer' : '')
-    p = answer.body
-    p Attachments
-    ul
-      = render answer.attachments
-    - if user_signed_in? && answer.user_id == current_user.id
-      p = link_to 'Edit answer', '', class: 'edit-answer-link', data: { answer_id: answer.id }
-      p
-        = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
-          = f.label :body, 'Answer'
-          = f.text_area :body
-          = render 'attachments/attachment_links', f: f
-          = f.submit 'Save answer'
-      p = link_to 'Delete answer', answer, remote: true, method: :delete, data: { confirm: 'Are you sure?' }
-      - if !answer.best?
-        p = link_to 'Best answer', set_best_answer_path(answer), remote: true, method: :patch
+  div.panel.panel-primary id="answer-id-#{answer.id}" class=(answer.best? ? 'best-answer' : '')
+    div.panel-heading
+      = answer.user.display_name
+      .pull-right = render 'answers/links', answer: answer
+    div.panel-body
+      p = answer.body
+      - if answer.attachments.present?
+        p Attachments
+        ul
+          = render answer.attachments
+      .text-right
+        small #{time_ago_in_words(answer.created_at)} ago
+  = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
+    = render 'answers/answer_edit', answer: answer, f: f
