--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,4 @@
-.container.question
+.container.question.question-block
   .panel.panel-default
     .panel-body
       .center.text-title
@@ -13,7 +13,9 @@
       - if user_signed_in? && @question.user.id == current_user.id
       .text-right
         = link_to 'Delete question', @question, method: :delete, class: 'btn btn-danger'
-  .container.answers
+      .question-votes id="#{dom_id(@question)}"
+        = render partial: 'common/votes', locals: { object: @question }
+  .container.answers.answer-block
     = render @question.answers
     = form_for [@question, @answer], remote: true do |f|
       = f.label :body, 'Your answer'
