--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -3,10 +3,10 @@ div.container
     div.text-center
       h1.text-info Listing questions
 
-table.table.table-hover
+table.table.table-hover.question-list
   tbody
     - @questions.each do |q|
-      tr
+      tr id="#{dom_id(q)}"
         td.col-md-9 = q.title
         td.col-md-2.text-center
           small = "asked #{time_ago_in_words(q.created_at)} ago"
@@ -18,3 +18,4 @@ div.text-center
       = link_to 'Back', root_path, class: 'btn btn-primary', role: 'button'
       = link_to 'Ask Question', new_question_path, class: 'btn btn-success', role: 'button'
 
+= subscribe_to "/questions"
