--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -15,6 +15,10 @@
         = link_to 'Delete question', @question, method: :delete, class: 'btn btn-danger'
       .question-votes id="#{dom_id(@question)}"
         = render partial: 'common/votes', locals: { object: @question }
+  .comments-list id="#{dom_id(@question)}"
+    = render @question.comments
+  - if user_signed_in?
+    = render 'comments/form', commentable: @question
   .container.answers.answer-block
     = render @question.answers
   = form_for [@question, @answer], remote: true do |f|
@@ -25,5 +29,6 @@
     - if user_signed_in?
       .text-center = f.submit 'Create', class: 'btn btn-primary'
 
-= subscribe_to "/answers/#{@question.id}"
-
+= subscribe_to "/questions/#{@question.id}/answers"
+= subscribe_to "/questions/#{@question.id}/comments"
+= subscribe_to "/questions/#{@question.id}/answers/comments"
