--- a/app/views/common/add_email.html.slim
+++ b/app/views/common/add_email.html.slim
@@ -1,7 +1,4 @@
 = form_tag add_email_path, method: :post do
   = label_tag 'Email'
-  = email_field 'auth[info]', :email, autofocus: true
-  = hidden_field_tag 'auth[provider]', auth.provider
-  = hidden_field_tag 'auth[uid]', auth.uid
-  = hidden_field_tag 'auth[info][name]', auth.info.try(:name)
+  = email_field 'user', :email, autofocus: true
   = submit_tag 'Add email'
