--- a/app/views/daily_mailer/digest.html.slim
+++ b/app/views/daily_mailer/digest.html.slim
@@ -1,10 +1,7 @@
-DailyMailer#digest
-
 = @greeting
 
 - if @questions.any?
   h3
     | List of new questions for last day
   - @questions.each do |question|
-    p
-      = link_to question.title, question_url(question)
+    p = link_to question.title, question_url(question)
