--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -15,6 +15,11 @@
           = link_to 'Delete question', @question, method: :delete, class: 'btn btn-danger'
       .question-votes id="#{dom_id(@question)}"
         = render partial: 'common/votes', locals: { object: @question }
+      .subscriptions
+        - if can? :subscribe, @question
+          = link_to 'Subscribe', subscribe_question_path(@question), method: :post
+        - if can? :unsubscribe, @question
+          = link_to 'Unsubscribe', unsubscribe_question_path(@question), method: :post
   .comments-list id="#{dom_id(@question)}"
     = render @question.comments
   - if can?(:create, Answer)
