--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,7 +34,7 @@ html lang="en"
             - else
               li= link_to "Sign in", new_user_session_path
               li= link_to "Sign up", new_user_registration_path
-
+          = render 'search/form'
     .container
       = bootstrap_flash
       = yield
